# libplacebo

./: .gitignore  CMakeLists.txt
demos/: CMakeLists.txt  plplay.c
src/: CMakeLists.txt
src/glsl/: CMakeLists.txt
src/include/libplacebo/: CMakeLists.txt
src/opengl/: CMakeLists.txt
src/shaders/: CMakeLists.txt
